# RoBIn-chatbot

./: LICENSE  README.md  docker-compose.yml  requirements.txt
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/src/: entrypoint.sh  main.py
chatbot_api/src/agents/: __init__.py  robin_rag_agent.py
chatbot_api/src/chains/: cochrane_cypher_chain.py  file_qa_chain.py  pdf_chain.py  pubmed_article_chain.py  review_study_chain.py  robin_tool_chain.py
chatbot_api/src/memory/: BaseMemory.py
chatbot_api/src/models/: linear_classifier.py  robin_rag_query.py
chatbot_api/src/utils/: async_utils.py
chatbot_frontend/: pyproject.toml
chatbot_frontend/src/: entrypoint.sh  main.py
data/cochrane/: rag_bias_types.csv  rag_example_cypher.csv  rag_reviews.csv  rag_studies.csv
data/evaluation/: robin_chatbot_test.csv  robin_chatbot_test.xlsx
data/examples/: PMC5133412.txt  PMC5134868.txt  PMC5154014.txt  PMC5159614.txt  PMC5168811.txt
robin_evaluation/: Dockerfile  pyproject.toml
robin_evaluation/src/: entrypoint.sh  evaluate_robin_chatbot.py
robin_neo4j_etl/: Dockerfile  pyproject.toml
robin_neo4j_etl/src/: cochrane_bulk_csv_write.py  entrypoint.sh
