[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.115.9",
    "chroma-hnswlib==0.7.6",
    "chromadb==1.0.8",
    "langchain==0.3.0",
    "langgraph==0.2.28",
    "langgraph-checkpoint==1.0.11",
    "langchain-core==0.3.59",
    "langchain-openai==0.3.16",
    "langchain-ollama==0.2.0",
    "langchain-elasticsearch==0.3.0",
    "langchain-community==0.3.0",
    "langchainhub==0.1.21",
    "langsmith==0.1.125",
    "neo4j==5.24.0",
    "numpy==1.26.3",
    "elasticsearch==8.15.1",
    "openai==1.78.1",
    "opentelemetry-api==1.22.0",
    "langchain_experimental==0.3.1",
    "pydantic==2.9.2",
    "pymupdf==1.24.14",
    "uvicorn==0.30.6",
    "ollama==0.4.8",
    "urllib3==2.2.3",
    "transformers==4.51.3",
    "torch==2.7.0",
    "tokenizers==0.21.1",
    "python-multipart==0.0.20",
    "debugpy==1.8.5"
]

[project.optional-dependencies]
dev = ["black", "flake8"]